--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,9 @@
     
     <!-- Custom JS -->
     <script src="{{ site.baseurl }}/assets/js/main.js" defer></script>
+    {% if page.url == '/projects/' %}
+    <script src="{{ site.baseurl }}/scripts/github-repos.js" defer></script>
+    {% endif %}
 
     <style>
         /* Navigation Styles */
