--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -408,7 +408,7 @@
                     <a href="/projects" class="nav-link">Projects <i class="fas fa-chevron-down"></i></a>
                     <div class="dropdown-content">
                         <a href="/projects#featured"><i class="fas fa-star"></i> Featured Projects</a>
-                        <a href="/projects#github"><i class="fab fa-github"></i> GitHub Projects</a>
+                        <a href="/github-projects"><i class="fab fa-github"></i> GitHub Projects</a>
                         <a href="/projects#healthcare"><i class="fas fa-heartbeat"></i> Healthcare</a>
                         <a href="/projects#enterprise"><i class="fas fa-building"></i> Enterprise</a>
                         <a href="/projects#data-science"><i class="fas fa-chart-line"></i> Data Science</a>
